// Copyright 2023 The Cross-Media Measurement Authors
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package wfa.measurement.internal.kingdom;

import "google/protobuf/timestamp.proto";
import "wfa/measurement/internal/kingdom/event_template.proto";

option java_package = "org.wfanet.measurement.internal.kingdom";
option java_multiple_files = true;

message Population {
  fixed64 external_data_provider_id = 1;
  fixed64 external_population_id = 2;

  string description = 3;

  // When the 'Population' was created.
  google.protobuf.Timestamp create_time = 4;

  // A reference to a population blob.
  message PopulationBlob {
    //  A uri for the model blob.
    string model_blob_uri = 1;
  }

  // The blob for the population.
  PopulationBlob population_blob = 5;

  // The EventTemplate that this population conforms to.
  EventTemplate event_template = 6;
}
